--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,7 @@
 ---
 # tasks file for centos
+  -
+    name: "update packages to latest"
+    shell: "yum update -y"
+    become: true
+    become_method: sudo
