--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for centos
   -
-    name: "update packages to latest"
+    nameeee: "update packages to latest"
     shell: "yum update -y"
     become: true
     become_method: sudo
