--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,6 +2,6 @@
 # tasks file for centos
   -
     name: "update packages to latest"
-    yum: name=* state=lastest
+    yum: name=* state=latest
     become: true
     become_method: sudo
