--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for centos
   -
-    name: "update packages to latest"
+    nameee: "update packages to latest"
     yum: name=* state=latest
     become: true
     become_method: sudo
